[package]
name = "bluboxen"
authors = ["Sean McKibben <graphex@graphex.com>"]
edition = "2018"
version = "0.0.1"

[dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.6"
cortex-m = "0.6.4"
cortex-m-rt = { version = "0.6.13", features = ["device"] }
alloc-cortex-m = "0.4.2"
cortex-m-semihosting = "0.3.7"
#daisy_bsp = { version = "0.4.1", features = ["seed", "alloc"]  }
#daisy_bsp = { git = "https://github.com/antoinevg/daisy_bsp.git", features = ["seed", "without-alloc"] }
#daisy_bsp = { git = "https://github.com/antoinevg/daisy_bsp.git", rev = "209d938b58d2ffe0e05af96103c17aa5a0cc0391", features = ["seed", "alloc"] }
daisy_bsp = { git = "https://github.com/backtail/daisy_bsp.git", rev = "b7b80f78dafc837b90e97a265d2a3378094b84f7", features = ["seed", "alloc"] }
shared-bus = { version = "0.2.2", features = ["cortex-m"] }
adafruit-alphanum4 = { version = "0.1.2", default-features = false }
ht16k33 = { version = "0.4.0", default-features = false }
keypad = "0.1.4"


[profile.dev]
codegen-units = 1
debug = 0
#lto = true
#opt-level = "z"